Task 7 a finished.